# EQBackend

./: manage.py  pyproject.toml
EQBackend/: asgi.py  settings.py  wsgi.py
EQBackend/EQapp/: add_test.py  models.py  serializers.py  urls.py  views.py
